[gd_scene load_steps=7 format=3 uid="uid://bjdros8jccxcd"]

[ext_resource type="Script" path="res://scripts/ui/menu_ui/menu_pause.gd" id="1_sk15p"]
[ext_resource type="FontFile" uid="uid://c4woi53l5vyy2" path="res://fonts/doulos_sil.ttf" id="1_veykp"]
[ext_resource type="PackedScene" uid="uid://b5cx4c5ht3cw6" path="res://scenes/ui/menu_ui/menu_settings.tscn" id="3_f6r5f"]

[sub_resource type="Theme" id="Theme_vl26m"]
default_font = ExtResource("1_veykp")

[sub_resource type="InputEventAction" id="InputEventAction_rh50j"]
action = &"ui_menu"

[sub_resource type="Shortcut" id="Shortcut_ybvfg"]
events = [SubResource("InputEventAction_rh50j")]

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sk15p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MenuPause" type="CenterContainer" parent="Margins"]
clip_contents = true
layout_mode = 2
theme = SubResource("Theme_vl26m")

[node name="VBoxContainer" type="VBoxContainer" parent="Margins/MenuPause"]
layout_mode = 2

[node name="ButtonContinue" type="Button" parent="Margins/MenuPause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
shortcut = SubResource("Shortcut_ybvfg")
shortcut_in_tooltip = false
text = "Продолжить игру"
flat = true

[node name="ButtonManual" type="Button" parent="Margins/MenuPause/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Руководство"
flat = true

[node name="ButtonSettings" type="Button" parent="Margins/MenuPause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Настройки"
flat = true

[node name="ButtonLevelSelect" type="Button" parent="Margins/MenuPause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Вернуться в выбор уровней"
flat = true

[node name="ButtonMainMenu" type="Button" parent="Margins/MenuPause/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Выйти в главное меню"
flat = true

[node name="ButtonExit" type="Button" parent="Margins/MenuPause/VBoxContainer"]
layout_mode = 2
text = "Выход"
flat = true

[node name="MenuSettings" parent="Margins" instance=ExtResource("3_f6r5f")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonManual" to="." method="_on_button_manual_pressed"]
[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonLevelSelect" to="." method="_on_button_level_select_pressed"]
[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="Margins/MenuPause/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="exit_menu" from="Margins/MenuSettings" to="." method="_on_menu_settings_exit_menu"]
